--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,17 @@
-version '1.0'
+buildscript {
+    ext {
+        springBootVersion = '1.5.2.RELEASE'
+    }
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+    }
+}
 
 apply plugin: 'java'
+apply plugin: 'org.springframework.boot'
 
 sourceCompatibility = 1.8
 
@@ -9,19 +20,13 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-}
-version '1.0'
-
-apply plugin: 'java'
-
-sourceCompatibility = 1.8
-
-repositories {
-    mavenCentral()
-}
-
-dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    compile "org.hibernate:hibernate-core:5.2.10.Final"
+    compile 'org.springframework.boot:spring-boot-starter'
+    runtime 'org.postgresql:postgresql'
+    testCompile 'org.springframework.boot:spring-boot-starter-java.testthecontroller'
+    compile 'org.springframework.boot:spring-boot-starter-web:' + springBootVersion
+    compile 'io.springfox:springfox-swagger2:2.6.1'
+    compile 'org.hibernate:hibernate-core:5.2.10.Final'
+    compile("org.springframework.boot:spring-boot-starter-data-jpa:$springBootVersion") {
+        exclude group: "org.apache.tomcat", module: "tomcat-jdbc"
+    }
 }
